syntax = "proto3";

package services.auth;

message SignUpRequest {
  string user_id = 1; 
  string username = 2;
  string password = 3;
}

message SignUpResponse {
  string user_id = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string user_id = 1;
  string auth_token = 2;
}

message ValidateUserRequest {
  string user_id = 1;
  string auth_token = 2;
}

message UserInfo {
  string user_id = 1;
  string username = 2;
  string email = 3;
}

message ValidateUserResponse {
  bool valid = 1;
  optional UserInfo userInfo = 2;
}

service AuthService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
}
